# COIN-OR-osi-clp

./: CMakeLists.txt  README.md
Clp/: README.MD
Clp/examples/: minimum.cpp  modify.cpp  p0033.mps
Clp/src/: CMakeLists.txt
Clp/src/OsiClp/: CMakeLists.txt
ext/CoinUtils/src/: CMakeLists.txt  CoinPackedMatrix.cpp  CoinPackedVector.cpp
ext/Osi/src/Osi/: CMakeLists.txt
ext/Osi/src/OsiMsk/: CMakeLists.txt
